feat: add category support to endpoints
