# controllers/request.go
@@ -3,7 +3,7 @@ package controllers
 import (
 	"fmt"
 
-	"github.com/WillianIsami/go_api/models"
+	"github.com/shopspring/decimal"
 )
 
 func errParamIsRequired(name, typ string) error {
@@ -11,25 +11,24 @@ func errParamIsRequired(name, typ string) error {
 }
 
 type CreateProductRequest struct {
-	Name        string          `json:"name"`
-	Description string          `json:"description"`
-	Price       string          `json:"price"`
-	Stock       int             `json:"stock"`
-	CategoryID  *uint           `json:"category_id"`
-	Category    models.Category `json:"category" gorm:"foreignKey:CategoryID"`
+	Name        string  `json:"name" binding:"required"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price" binding:"required"`
+	Stock       int     `json:"stock" binding:"required"`
+	CategoryID  *uint   `json:"category_id" binding:"required"`
 }
 
 func (r *CreateProductRequest) Validate() error {
+	price := decimal.NewFromFloat(r.Price)
 	conditions := map[string]bool{
 		"name":        r.Name == "",
 		"description": r.Description == "",
-		"price":       r.Price == "",
+		"price":       !price.GreaterThan(decimal.Zero),
 		"stock":       r.Stock <= 0,
 		"category_id": r.CategoryID == nil,
-		"category":    r.Category.IsEmpty(),
 	}
 
-	if r.Name == "" && r.Description == "" && r.Price == "" && r.Stock <= 0 && r.CategoryID == nil && r.Category.IsEmpty() {
+	if r.Name == "" && r.Description == "" && !price.GreaterThan(decimal.Zero) && r.Stock <= 0 && r.CategoryID == nil {
 		return fmt.Errorf("request body is empty or malformed")
 	}
 	for k, v := range conditions {
@@ -42,6 +41,9 @@ func (r *CreateProductRequest) Validate() error {
 		if conditions["category"] {
 			return errParamIsRequired(k, "Category")
 		}
+		if conditions["price"] {
+			return errParamIsRequired(k, "float64")
+		}
 		if v {
 			return errParamIsRequired(k, "string")
 		}
@@ -50,16 +52,16 @@ func (r *CreateProductRequest) Validate() error {
 }
 
 type UpdateProductRequest struct {
-	Name        string          `json:"name"`
-	Description string          `json:"description"`
-	Price       string          `json:"price"`
-	Stock       int             `json:"stock"`
-	CategoryID  *uint           `json:"category_id"`
-	Category    models.Category `json:"category" gorm:"foreignKey:CategoryID"`
+	Name        string  `json:"name" binding:"required"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price" binding:"required"`
+	Stock       int     `json:"stock" binding:"required"`
+	CategoryID  *uint   `json:"category_id" binding:"required"`
 }
 
 func (r *UpdateProductRequest) Validate() error {
-	if r.Name == "" && r.Description == "" && r.Price == "" && r.Stock <= 0 && r.CategoryID == nil && r.Category.IsEmpty() {
+	price := decimal.NewFromFloat(r.Price)
+	if r.Name == "" && r.Description == "" && !price.GreaterThan(decimal.Zero) && r.Stock <= 0 && r.CategoryID == nil {
 		return nil
 	}
 	return fmt.Errorf("at least one valid field must be provided")
